# HW/server/routes/api.js
@@ -20,39 +20,40 @@ const fs = require("fs");
 // });
 
 let list;
-
 fs.readFile("./config/articles.json", "utf8", function(err, data) {
   if (err) {
-    return console.log(err);
+    return log.err(err);
   }
-  list = data;
-  list = JSON.parse(list);
+
+  try {
+    list = JSON.parse(data);
+  } catch (err) {
+    log.err(err);
+  }
 });
 
-router.route('/')
-  //getting static file
-  .get(function (req, res) {
-    res.sendFile(path.resolve(__dirname, 'index.html'));
-  })
 router.route('/articles')
-  .get(function (req, res) {
+  .get((req, res) => {
     log.info('==Get all list articles==');
-    res.end(JSON.stringify(list));
+    res.end(res.json(list));
   })
-router.route('/articles')
-  .post(function (req, res) {
+router.route('/article')
+  .post((req, res) => {
     log.info('==Save article==');
     list.push(req.body);
-    res.end(JSON.stringify(list));
+    res.end(res.json(list));
   })
 router.route('/articles/:id')
-  .get(function (req, res) {
+  .get((req, res) => {
     log.info('==Get article by id==');
     const articleById = list.find(article => +article.id === +req.params.id);
-    res.end(JSON.stringify(articleById));
+    if (!articleById) {
+        res.sendStatus(404);
+    }
+    res.end(res.json(articleById));
   })
 router.route('/articles/:id')
-  .patch(function (req, res) {
+  .put((req, res) => {
     log.info('==Edit article by id==');
     const index = list.findIndex(article => +article.id === +req.params.id);
     if (index > -1) {
@@ -60,19 +61,19 @@ router.route('/articles/:id')
     const  updatedArticle = {...articleById , ...req.body};
         list[index] = updatedArticle;
     }
-    res.end(JSON.stringify(list));
+    res.end(res.json(list));
   })
 router.route('/articles/:id')
-  .delete(function (req, res) {
+  .delete((req, res) => {
     log.info('==Delete article by id==');
     list = list.filter(article => +article.id !== +req.params.id);
-    res.end(JSON.stringify(list));
+    res.end(res.json(list));
   })
 router.route('/articles')
-  .delete(function (req, res) {
+  .delete((req, res) => {
     log.info('==Delete all articles==');
     list.splice(0, list.length);
-    res.end(JSON.stringify(list));
+    res.sendStatus(201);
   });
 
 module.exports = router;
